@@ -2,12 +2,12 @@
 .\"     Title: simadb_cli
 .\"    Author: Jack Kaliko <kaliko@azylum.org>
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 11/18/2017
+.\"      Date: 11/21/2017
 .\"    Manual: mpd-sima 0.14.5 User Manual
 .\"    Source: mpd-sima
 .\"  Language: English
 .\"
-.TH "SIMADB_CLI" "1" "11/18/2017" "mpd-sima" "mpd-sima 0.14.5 User Manual"
+.TH "SIMADB_CLI" "1" "11/21/2017" "mpd-sima" "mpd-sima 0.14.5 User Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
