@@ -70,7 +70,6 @@ verbosity = info
 #
 # Possible values for internal
 #	Lastfm   : Queue using last.fm web service for suggestions.
-#	EchoNest : Queue using EchoNest web service for suggestions.
 #	Random   : Queue a track at random (different flavour, cf. documentation)
 #	Crop     : Remove old tracks from queue
 #
@@ -140,8 +139,6 @@ flavour=sensible
 #track_to_add = 1
 
 
-# EchoNest or Lastfm
-#[echonest]
 [lastfm]
 ## QUEUE_MODE
 # type: string
@@ -190,8 +187,7 @@ album_to_add = 1
 #  * When set to "true", sima will use a persistent cache for its http client.
 #    The cache is written along with the dbfile in:
 #                $XDG_CONFIG_HOME/mpd_sima/http/<web_service>
-#    Toggling http cache is only available for last.fm. EchoNest have rate limits,
-#    we must then pay attention to bandwidth and use of caching is required.
+#     Until #7 is closed LastFM is broken; cf. https://gitlab.com/kaliko/sima/issues/7
 #  * If set to "false", caching is still done but in memory.
 # default: True
 cache = True
