@@ -3,7 +3,7 @@
 MPD_sima is a non interactive MPD autoqueue client running in the background.
 It will queue new tracks chosen among artists similar to your current queued
 tracks, provided a title is found in your music library.
-Similar artists are fetched from last.fm or EchoNest webservice.
+Similar artists are fetched from last.fm webservice.
 
 MPD_sima can queue track, top track or whole album for similar artists.
 
@@ -12,7 +12,7 @@ short.
 """
 
 
-__version__ = '0.14.5'
+__version__ = '0.15.0'
 __author__ = 'kaliko jack'
 __email__ = 'kaliko@azylum.org'
 __url__ = 'git://git.kaliko.me/sima.git'
