@@ -1,5 +1,6 @@
 MPD_sima v0.15.0
 
+ * Remove EchoNest support (Closes #10)
  * Enhanced queuing behavior in random mode (Closes #16)
 
 -- kaliko jack <kaliko@azylum.org> UNRELEASED
